--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">  
       <div class="txcenter">
         <div id="rndimg"></div>
-        <h1>SisterKisser.org</h1>
+        <h1>virtual sister kisser</h1>
         <h3>-Jasmine E. Glory Esq.</h3>
         <img src="assets/tumblr_c43f9b460fd20ff2bb36910d344e11dc_ebb0338e_250.webp" alt="">
         <br><img src="assets/queercodedstamp.webp" alt="">
